--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "json-server": "^0.16.3"
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "json-server": "^0.16.3",
+    "react-bootstrap": "^1.6.1",
+    "react-router-dom": "^5.2.0",
+    "web-vitals": "^2.0.1"
   }
 }
